--- a/Assets/css/styles.css
+++ b/Assets/css/styles.css
@@ -4,10 +4,6 @@ p {
   color: black
 }
 
-/* solo los parrafos con clase "X" */
-.verde {
-  color: green;
-}
 
 h1 {
   text-align: center;
@@ -19,6 +15,7 @@ h2 {
 
 p {
   text-align: justify;
+  font-size: 24px;
 }
 
 iframe {
@@ -39,3 +36,4 @@ iframe {
   background-color: black;
   color: white;
 }
+
